--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-/node_modules
+# 忽略 node_modules 目录
+node_modules/
+
+# 忽略日志文件
+*.log
+
+# 忽略操作系统生成的文件
+.DS_Store
+Thumbs.db
+
+# 忽略环境变量文件
+.env
+
+# 忽略编译输出目录
+dist/
+build/
+
+# 忽略覆盖率报告目录
+coverage/
+
+# 忽略临时文件
+*.tmp
+*.temp
+
+# 忽略 IDE 和编辑器配置文件
+.vscode/
+.idea/
