--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "wecom_worktool_backend",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
@@ -12,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "chokidar": "^3.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
