--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
  # @Author: 杨仕明 shiming.y@qq.com
  # @Date: 2024-05-24 21:29:58
  # @LastEditors: 杨仕明 shiming.y@qq.com
- # @LastEditTime: 2024-05-25 17:55:39
+ # @LastEditTime: 2024-05-26 08:50:16
  # @FilePath: /wecom_worktool_backend/.env.example
  # @Description: 
  # 
@@ -10,5 +10,8 @@
 ### 
 
 COZE_ROBOT_URL = https://api.coze.cn/open_api/v2/chat
-COZE_ROBOT_ID = 7368796970410459174
-COZE_ROBOT_PAT = p
+COZE_ROBOT_ID = 7369174
+COZE_ROBOT_PAT = guigy
+WORKTOOL_MES_URL=https://api.worktool.ymdyes.cn/wework/sendRawMessage
+WORKTOOL_ROBOT_ID=23752a90d19
+VISIT_KEY=123456
