--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "wecom_worktool_backend",
-  "version": "1.0.0",
-  "main": "app.js",
+  "name": "wecom-worktool-backend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
-    "build": "node app.js"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "chokidar": "^3.6.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
     "winston": "^3.13.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "description": ""
+  }
 }
