--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+    "version": 2,
     "builds": [
         {
-            "src": "app.js",
-            "use": "@now/node"
+            "src": "api/index.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "(.*)",
-            "dest": "app.js"
+            "src": "/(.*)",
+            "dest": "/api"
         }
     ]
 }
