--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,17 @@
  # @Author: 杨仕明 shiming.y@qq.com
  # @Date: 2024-05-24 21:29:58
  # @LastEditors: 杨仕明 shiming.y@qq.com
- # @LastEditTime: 2024-05-26 08:50:16
+ # @LastEditTime: 2024-05-27 16:40:19
  # @FilePath: /wecom_worktool_backend/.env.example
  # @Description: 
  # 
  # Copyright (c) 2024 by ${git_name_email}, All Rights Reserved. 
 ### 
 
+COZE_ROBOT_ID = 73684321421
+COZE_ROBOT_PAT = pat_uI421345432
 COZE_ROBOT_URL = https://api.coze.cn/open_api/v2/chat
-COZE_ROBOT_ID = 7369174
-COZE_ROBOT_PAT = guigy
-WORKTOOL_MES_URL=https://api.worktool.ymdyes.cn/wework/sendRawMessage
-WORKTOOL_ROBOT_ID=23752a90d19
-VISIT_KEY=123456
+WORKTOOL_MES_URL = https://api.worktool.ymdyes.cn/wework/sendRawMessage
+WORKTOOL_ROBOT_ID = 432493424243242432
+VISIT_KEY = lulab——3424
+PORT = 3000
