--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "progress": "^2.0.3",
     "serve-favicon": "^2.5.0",
     "winston": "^3.13.0"
   }
