--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.1",
     "progress": "^2.0.3",
     "serve-favicon": "^2.5.0",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "ws": "^8.17.0"
   }
 }
