添加返回AI回复信息是否包含推荐问题可选项目

--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,27 @@
  # @Author: 杨仕明 shiming.y@qq.com
  # @Date: 2024-05-24 21:29:58
  # @LastEditors: 杨仕明 shiming.y@qq.com
- # @LastEditTime: 2024-05-27 16:40:19
+ # @LastEditTime: 2024-05-30 13:16:33
  # @FilePath: /wecom_worktool_backend/.env.example
  # @Description: 
  # 
  # Copyright (c) 2024 by ${git_name_email}, All Rights Reserved. 
 ### 
 
+# Coze机器人ID
 COZE_ROBOT_ID = 73684321421
+# Coze_API_KEY
 COZE_ROBOT_PAT = pat_uI421345432
+# COZE机器人请求接口
 COZE_ROBOT_URL = https://api.coze.cn/open_api/v2/chat
+# 返回AI回复信息是否包含推荐问题false or false
+IS_SED_RECOMMEND = false
+# WORKTOOL发送信息接口
 WORKTOOL_MES_URL = https://api.worktool.ymdyes.cn/wework/sendRawMessage
+# WORKTOOL机器人ID
 WORKTOOL_ROBOT_ID = 432493424243242432
+# 前端页面访问密钥
 VISIT_KEY = lulab——3424
+
+# 访问端口
 PORT = 3000
