up •env.example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
  # @Author: 杨仕明 shiming.y@qq.com
  # @Date: 2024-05-24 21:29:58
  # @LastEditors: 杨仕明 shiming.y@qq.com
- # @LastEditTime: 2024-05-30 13:16:33
+ # @LastEditTime: 2024-05-30 16:05:52
  # @FilePath: /wecom_worktool_backend/.env.example
  # @Description: 
  # 
@@ -23,6 +23,7 @@ WORKTOOL_MES_URL = https://api.worktool.ymdyes.cn/wework/sendRawMessage
 WORKTOOL_ROBOT_ID = 432493424243242432
 # 前端页面访问密钥
 VISIT_KEY = lulab——3424
-
 # 访问端口
 PORT = 3000
+# webhook回调接口
+WEBHOOK_URL = https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=1
