--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
  # @Author: 杨仕明 shiming.y@qq.com
  # @Date: 2024-05-24 21:29:58
  # @LastEditors: 杨仕明 shiming.y@qq.com
- # @LastEditTime: 2024-05-27 16:40:19
+ # @LastEditTime: 2024-06-01 09:30:10
  # @FilePath: /wecom_worktool_backend/.env.example
  # @Description: 
  # 
@@ -14,5 +14,5 @@ COZE_ROBOT_PAT = pat_uI421345432
 COZE_ROBOT_URL = https://api.coze.cn/open_api/v2/chat
 WORKTOOL_MES_URL = https://api.worktool.ymdyes.cn/wework/sendRawMessage
 WORKTOOL_ROBOT_ID = 432493424243242432
-VISIT_KEY = lulab——3424
+VISIT_KEY = lulab——3424678976
 PORT = 3000
